@@ -1,3 +1,5 @@
+* Agent Console: fix incorrect check for schedule_use_daterange and
+  schedule_use_sameagent flags in call scheduling.
 * Agent Console: fix incorrect check for atxfer parameter in call transfer.
   This should allow attended transfer to work from the web console.
 * Dialer: remove last call to deprecated ereg(). 
